Bug 128612 - Area Style/Filling dropdown from Image toolbar doesn't work
Summary: Area Style/Filling dropdown from Image toolbar doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.3.3.2 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords:
: 103229 123804 131772 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2019-11-05 23:11 UTC by Gerhard Weydt
Modified: 2021-08-25 19:42 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
showing the difference between toolbar and sidebar (16.51 KB, image/png)
2019-11-05 23:11 UTC, Gerhard Weydt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard Weydt 2019-11-05 23:11:11 UTC
Created attachment 155545 [details]
showing the difference between toolbar and sidebar

The toolbars - in all versions of the user interface, where applicable - behave wrongly as regards the choice of "pattern:
Main Problem:
Draw a rectangle or else, choose Format -> Area -> Pattern, choose some pattern (or use the sidebar). The pattern is applied correctly to the form. But then look at the toolbar: the selection in area type is "Bitmap", while the pattern is still displayed. If you use the dropdown list, it is shown in conjunction with the bitmaps. Selecting pattern again yields filling the object with the default colour. The toolbar still shows "pattern" whereas the dialog and the sidebar correctly show "none".
Minor Problem: most probably having the same reason; selecting pattern as area type, no patterns are displayed.

The bug is still there in
Version: 6.4.0.0.alpha1 (x64)
Build ID: cc57df8f942f239d29cb575ea5a7cb01405db787
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded
I found it in 5.3.3.1, but not in 5.2.7.2. In this last mentioned version there still is no area style "pattern", this appears in 5.3.3.1, which probably was not added completely.
There is a similar bug report: #123804. In https://bugs.documentfoundation.org/show_bug.cgi?id=123804#c3 Julien Nabet points to a possible reason, which supports the assumption of an incomplete amendment.
Comment 1 Xisco Faulí 2019-11-25 15:16:03 UTC
Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: d6e2d624a124454fa4ac80cb30a924571a609101
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-11-25 15:17:26 UTC
@Heiko, anyone from the UX team that might be interested in fixing this issue ?
Comment 3 Heiko Tietze 2019-11-26 13:08:30 UTC
Not sure about the meta blocker... Adding also Jim as he did some work around this topic.
Comment 4 Heiko Tietze 2021-06-23 13:18:34 UTC
It's beyond my skills. 

In svx/source/tbxctrls/fillctrl.cxx the function SvxFillToolBoxControl::StateChangedAtToolBoxControl() receives SID_ATTR_FILL_BITMAP; there is no SID_ATTR_FILL_PATTERN defined. 

Pattern and Bitmaps seems to be handled similar, see for example svx/source/sidebar/area/AreaPropertyPanelBase.cxx AreaPropertyPanelBase::Update() 

            case eFillStyle::BITMAP:
            case eFillStyle::PATTERN:
            {
...
                    if(pSh && pSh->GetItem(SID_BITMAP_LIST) && eXFS == BITMAP)
                    {
                    else if(pSh && pSh->GetItem(SID_PATTERN_LIST) && eXFS == PATTERN)
                    {
...

Maybe Bubli knows whether this is easy to solve or just not implemented yet.
Comment 5 Commit Notification 2021-07-20 10:00:28 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1a8ff837e3e369561150c0022c6ab02aab27c2c

tdf#128612: Support applying pattern fill from toolbar

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Katarina Behrens 2021-07-20 20:43:12 UTC
*** Bug 123804 has been marked as a duplicate of this bug. ***
Comment 7 BogdanB 2021-07-23 21:13:11 UTC
Katarina, I tested if the bug is fixed and I notice this:

In Version: 7.3.0.0.alpha0+ / LibreOffice Community i create a shape - Area - Pattern and choose a pattern, but the toolbar still shows Bitmap instead of Pattern. It's the latest update to 7.3. 

Please could you test it?

7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 612d5b1a04fe022a34018d901bb9b052791d54e5
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Katarina Behrens 2021-07-27 08:46:55 UTC
*** Bug 131772 has been marked as a duplicate of this bug. ***
Comment 9 Katarina Behrens 2021-07-27 08:54:29 UTC
*** Bug 103229 has been marked as a duplicate of this bug. ***
Comment 10 Katarina Behrens 2021-07-27 09:12:18 UTC
> In Version: 7.3.0.0.alpha0+ / LibreOffice Community i create a shape - Area
> - Pattern and choose a pattern, but the toolbar still shows Bitmap instead
> of Pattern. It's the latest update to 7.3. 


Ouch ...
It works when you apply shape fill via sidebar > area property panel. The toolbar picks up pattern fill correctly.

It doesn't work [initially] via Format > Area or equivalent context menu. The left listbox in toolbar shows 'Bitmap' (wrong) but the right listbox has the list of patterns (correct)

Please open a new bug. Meanwhile, use sidebar as a workaround
Comment 11 BogdanB 2021-07-27 20:59:44 UTC
The dropdown from toolbar is working well now.

Tested with
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 612d5b1a04fe022a34018d901bb9b052791d54e5
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

For the the difference between toolbar and sidebar I will open a new bug soon.
Comment 12 Commit Notification 2021-08-25 19:42:27 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/a7062af6bfb821c5b8e7d110476332d84d17f624

tdf#128612: Support applying pattern fill from toolbar

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.