tdf#128612: Support applying pattern fill from toolbar

List available pattern fills and add 'pattern' case to state and
execute functions

This is likely not perfect and there's still boatloads of code
duplication that should be cleaned up eventually, but hey, it fixes
the bug

Change-Id: I3381a4271bb32a63c048cbecb0b54ebabe12ef51
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119229
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <bubli@bubli.org>
(cherry picked from commit c1a8ff837e3e369561150c0022c6ab02aab27c2c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120241
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>